Added header & footer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,21 @@
 </head>
 
 <body>
-  
+  <header>
+    <h1>Pokédex</h1>
+  </header>
+
+
+  <footer>
+    <div class="socials">
+      <a href="https://www.linkedin.com/in/ecpieritz/" target="_blank" rel="noopener noreferrer"><img src="https://github.com/ecpieritz/png-logos/blob/main/linkedin-black.png?raw=true" alt="linkedin"></a>
+      <a href="https://github.com/ecpieritz" target="_blank" rel="noopener noreferrer"><img src="https://github.com/ecpieritz/png-logos/blob/main/github-black.png?raw=true" alt="github"></a>
+    </div>
+    <div class="made-by">
+      <h4>Developed with ❤️ by Emilyn C. Pieritz</h4>
+    </div>
+  </footer>
+
   <!-- Import Scripts -->
   <script src="/assets/js/pokemon-model.js"></script>
   <script src="/assets/js/poke-api.js"></script>
