Added content section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
     <h1>Pokédex</h1>
   </header>
 
+  <section class="content">
+    <ol id="pokemonList" class="pokemons">
+      <!-- ..... Pokemons here ..... -->
+    </ol>
+
+    <div class="pagination">
+      <button id="loadMoreButton" type="button">
+        Load More
+      </button>
+    </div>
+  </section>
 
   <footer>
     <div class="socials">
